# Jaxx_test_task

./: .env.template  README.md  pyproject.toml
app/: main.py
app/api_v1/: api.py
app/api_v1/endpoints/: visitors.py
app/core/: config.py
app/crud/: base.py  visitor.py
app/db/: session.py
app/models/: visitor.py
app/schemas/: visitor.py
app/services/: google_analytics.py
tests/: test_main.py
